--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,9 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  schedule:
+    #Runs "at minute 55 past every hour" (see https://crontab.guru)
+    - cron: '0 */6 * * *'
 jobs:
   test:
     timeout-minutes: 60
