--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,11 +22,14 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test earnin.spec.ts --project=safari
-      run: npx playwright test earnin.spec.ts --project=safari --update-snapshots
-
+    - name: Run Update snapshot
+      run: npx playwright test earnin.spec.ts --project=safari --update-snapshots  
+    
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+
+    
