--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,7 +22,7 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test earnin.spec.ts --project=safari
-      - if: failure()
+      if: failure()
         run: npx playwright test earnin.spec.ts --project=safari --update-snapshots  
     
     - uses: actions/upload-artifact@v3
