--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,8 +21,9 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test earnin.spec.ts --project=safari --headed
-     
+      run: npx playwright test earnin.spec.ts --project=safari
+    - if: failure()
+      run: npx playwright test earnin.spec.ts --project=safari --update-snapshots  
     
     - uses: actions/upload-artifact@v3
       if: always()
