--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,7 +30,7 @@ jobs:
         path: playwright-report/
         retention-days: 30
 
-    - name: Run Playwright tests
+    - name: Run Update snapshots
       run: npx playwright test earnin.spec.ts --project=safari --update-snapshots
 
     
